# Koala

./: .env.example  .gitignore  LICENSE  README.es.md  README.md  cli.py  cli_config.py  example.txt  main.py  publish.sh  pyproject.toml  requirements.txt  tasks.md
core/: models.py  parser.py
docs/: architecture.md  how-to-add-a-typography.md  layouts.md  prompts.md  syntax.md  tutorial.md
docs/examples/: radial.txt  tree.txt
docs/prompts/: README.md  radial.md  synoptic.md  synoptic_boxes.md  tree.md
layout/: conceptual_topdown.py  models.py  radial_layout.py  registry.py  shared.py  synoptic_boxes_layout.py  synoptic_layout.py  tree_layout.py
mocks/: celula.txt  dsl.txt  financial_admin.txt  innovacion.txt  metadata_demo.txt  test_1.txt  test_2.txt  test_3.txt  theme_default_tree.txt  theme_jungle_radial.txt  theme_terracotta_synoptic_boxes.txt
render/: __init__.py  context.py  defaults.py  geometry.py  models.py  output.py  pdf_render.py  scene.py  settings.py  svg_canvas.py  svg_render.py  themes.py  viewport.py
render/svg/: __init__.py  canvas.py  document.py  edges.py  nodes.py  text.py
src/koala/: __init__.py  __main__.py  api.py  cli.py  config.py
src/koala/core/: io.py
src/koala/layout/: __init__.py  models.py  radial_layout.py  registry.py  shared.py  synoptic_boxes_layout.py  synoptic_layout.py  tree_layout.py
src/koala/render/: __init__.py  context.py  export.py  geometry.py  models.py  output.py  settings.py  (+3 more)
tests/: README.md
tests/end_to_end/: README.md  e2e_manifest.json
tests/structural/: README.md
tests/unit/: README.md
(+75 files in other folders)
