[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "koala-diagrams"
version = "0.1.0"
description = "Koala is a DSL and SVG compiler for structured concept diagrams."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "charset-normalizer==3.4.5",
  "lxml==6.0.2",
  "pillow==12.1.1",
  "python-docx==1.2.0",
  "svgwrite==1.4.3",
  "typing_extensions==4.15.0",
]

[project.scripts]
koala = "cli:main"

[tool.setuptools]
py-modules = ["cli", "cli_config"]

[tool.setuptools.packages.find]
include = ["core", "core.*", "layout", "layout.*", "render", "render.*"]
